update composition type

--- a/data/tabular/formation_energies/meta.yaml
+++ b/data/tabular/formation_energies/meta.yaml
@@ -22,7 +22,7 @@ targets:
 benchmarks: []
 identifiers:
     - id: composition
-      type: text
+      type: COMPOSITION
       description: chemical formula
 license: CC BY 4.0
 links:
