--- a/data/tabular/h2_storage_materials/meta.yaml
+++ b/data/tabular/h2_storage_materials/meta.yaml
@@ -19,7 +19,7 @@ identifiers:
       type: IUPAC
       description: chemical name
     - id: chemical_formula
-      type: Other
+      type: COMPOSITION
       names:
           - noun: chemical formula
       description: chemical formula
