--- a/data/tabular/iupac_smiles/meta.yaml
+++ b/data/tabular/iupac_smiles/meta.yaml
@@ -36,7 +36,7 @@ license: CC0 (Public Domain)
 links:
     - url: https://pubchem.ncbi.nlm.nih.gov/
       description: original data source
-num_points: 5551
+num_points: 27224618
 bibtex:
     - |-
       @article{Kim_2022, title={PubChem 2023 update},
@@ -52,22 +52,22 @@ bibtex:
       and Zhang, Jian and Bolton, Evan E},
       year={2022}, month=oct, pages={D1373–D1380} }
 templates:
-    - The {Traditional__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} is {Traditional#}.
-    - The {CAS_like_Style__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} is {CAS_like_Style#}.
-    - The {Preferred__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} is {Preferred#}.
-    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Traditional__names__noun} is {SMILES#}.
-    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Systematic__names__noun} is {SMILES#}.
-    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {CAS_like_Style__names__noun} is {SMILES#}.
-    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Preferred__names__noun} is {SMILES#}.
+    - The {Traditional__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} {SMILES#} is {Traditional#}.
+    - The {CAS_like_Style__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} {SMILES#} is {CAS_like_Style#}.
+    - The {Preferred__names__noun} of the {#molecule|chemical|compound!} with {SMILES__names__noun} {SMILES#} is {Preferred#}.
+    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Traditional__names__noun} {Traditional#} is {SMILES#}.
+    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Systematic__names__noun} {Systematic#} is {SMILES#}.
+    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {CAS_like_Style__names__noun} {CAS_like_Style#} is {SMILES#}.
+    - The {SMILES__names__noun} of the {#molecule|chemical|compound!} with {Preferred__names__noun} {Preferred#} is {SMILES#}.
     - |-
-      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of the {#molecule|chemical|compound!} with {Traditional__names__noun} {#IUPAC|IUPAC name!}.
+      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of a {#molecule|chemical|compound!} {#given the|based on the!} {Traditional__names__noun}.
       IUPAC name: {Traditional#}
       Result: {SMILES#}
     - |-
-      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of the {#molecule|chemical|compound!} with {Systematic__names__noun} {#IUPAC|IUPAC name!}.
+      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of a {#molecule|chemical|compound!} {#given the|based on the!} {Systematic__names__noun}.
       IUPAC name: {Systematic#}
       Result: {SMILES#}
     - |-
-      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of the {#molecule|chemical|compound!} with {CAS_like_Style__names__noun} {#IUPAC|IUPAC name!}.
+      Task: Please {#give me|create|generate!} the {#SMILES|SMILES representation!} of a {#molecule|chemical|compound!} {#given the|based on the!} {CAS_like_Style__names__noun}.
       IUPAC name: {CAS_like_Style#}
       Result: {SMILES#}
