--- a/data/kg/compound_chebi_chebi_chebi_2/meta.yaml
+++ b/data/kg/compound_chebi_chebi_chebi_2/meta.yaml
@@ -1,19 +1,37 @@
 ---
-name: compound_protein_compound
+name: compound_chebi_chebi_chebi_2
 description: Knowledgegraph data samples.
 targets:
+    - id: node1_type
+      description: node1_type
+      type: Other
+      units: node1_type
+      names:
+          - noun: node1_type
+    - id: node1_name
+      description: node1_name
+      type: Other
+      units: node1_name
+      names:
+          - noun: node1_name
+    - id: node1_id
+      description: node1_id
+      type: Other
+      units: node1_id
+      names:
+          - noun: node1_id
+    - id: rel1_type
+      description: rel1_type
+      type: Other
+      units: rel1_type
+      names:
+          - noun: rel1_type
     - id: node2_type
       description: node2_type
       type: Other
       units: node2_type
       names:
           - noun: node2_type
-    - id: node2_protein_names
-      description: node2_protein_names
-      type: Other
-      units: node2_protein_names
-      names:
-          - noun: node2_protein_names
     - id: node2_name
       description: node2_name
       type: Other
@@ -38,12 +56,6 @@ targets:
       units: node3_type
       names:
           - noun: node3_type
-    - id: node3_smiles
-      description: node3_smiles
-      type: Other
-      units: node3_smiles
-      names:
-          - noun: node3_smiles
     - id: node3_name
       description: node3_name
       type: Other
@@ -56,38 +68,43 @@ targets:
       units: node3_id
       names:
           - noun: node3_id
+    - id: rel3_type
+      description: rel3_type
+      type: Other
+      units: rel3_type
+      names:
+          - noun: rel3_type
+    - id: node4_type
+      description: node4_type
+      type: Other
+      units: node4_type
+      names:
+          - noun: node4_type
+    - id: node4_name
+      description: node4_name
+      type: Other
+      units: node4_name
+      names:
+          - noun: node4_name
+    - id: node4_id
+      description: node4_id
+      type: Other
+      units: node4_id
+      names:
+          - noun: node4_id
 identifiers:
-    - id: node1_type
-      description: node1_type
-      type: Other
-    - id: node1_smiles
-      description: node1_smiles
-      type: Other
-    - id: node1_name
-      description: node1_name
-      type: Other
-    - id: node1_id
-      description: node1_id
-      type: Other
-    - id: rel1_type
-      description: rel1_type
-      type: Other
+    - id: SMILES
+      description: SMILES
+      type: SMILES
 license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 205166
+num_points: 1480272
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
       \ Volkan},\ntitle = \"{CROssBAR: comprehensive resource of biomedical relations with knowledge graph representations}\",\njournal = {Nucleic Acids\
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
-templates:
-    - The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#} and {rel2_type#} the {node3_type#} {node3_name#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by the drug with the SMILES {node1_smiles#} and {node3_name#}.
-    - |-
-      User: Can you give me an example for a {node1_type#} SMILES that {rel1_type#} the {node2_type#} {node2_protein_names#}?
-      Assistant: Yes, The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
-      User: Can you tell me another {node1_type#} SMILES that {rel1_type#} the {node2_type#} {node2_protein_names#}?
-      Assistant: Of course, the {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node3_type#} SMILES {node3_smiles#}.
+templates: []
