fix: chembl request for fda adverse reactions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dataset_creation = [
       #  "safe-mol",
         "backoff",
         "givemeconformer",
+        "chembl_webresource_client"
 ]
 
 training = [
