--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -15,107 +15,90 @@ targets:
       description: Aqueous solubility prediction using machine learning
       units: logS
       type: continuous
-      significant_figures: 3
       names:
           - noun: ML-predicted aqueous solubility
-      sample: false
     - id: molecularSurface
       description: Total surface area of a molecule
       units: \AA^2
       type: continuous
-      significant_figures: 3
       names:
           - noun: molecular surface area
     - id: reactionFieldEnergy
       description: Energy associated with the interaction during a chemical reaction
       units: kT
       type: continuous
-      significant_figures: 3
       names:
-          - noun: chemical reaction field energy in aqueous solution modeled with a Poisson-Boltzmann Solvation Model
+          - noun: chemical reaction field energy
     - id: solventAccessSurface
       description: Surface area of a molecule accessible to a solvent
       units: \AA^2
       type: continuous
-      significant_figures: 3
       names:
           - noun: solvent-accessible surface area
     - id: cavityEnergy
       description: Energy associated with the formation of cavities in a molecular structure
       units: kT
       type: continuous
-      significant_figures: 3
       names:
           - noun: cavity formation energy at the PBE level of theory
     - id: gasEnergy
       description: Total energy of a molecule in the gas phase
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: gas-phase molecular energy at the PBE level of theory
     - id: gasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of a gas-phase molecule
-
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: gaseous phase HOMO energy at the PBE level of theory
     - id: gasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of a gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: gaseous phase LUMO energy at the PBE level of theory
     - id: solutionEnergy
       description: Total energy of a molecule in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: aqueous phase molecular energy at the PBE level of theory
     - id: solutionHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: aqueous phase HOMO energy at the PBE level of theory
     - id: solutionLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: aqueous phase LUMO energy at the PBE level of theory
     - id: nuclearRepulsionEnergy
       description: Electrostatic repulsion energy between atomic nuclei in a molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: nuclear repulsion energy at the PBE level of theory
     - id: optGasEnergy
       description: Total energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: optimized gas-phase molecular energy at the PBE level of theory
     - id: optGasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: optimized gas-phase HOMO energy at the PBE level of theory
     - id: optGasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
       names:
           - noun: optimized gas-phase LUMO energy calculated at the PBE level of theory
           - noun: optimized gas-phase LUMO energy calculated with DFT at the PBE level of theory
@@ -123,6 +106,9 @@ identifiers:
     - id: SMILES
       type: SMILES
       description: SMILES
+    - id: InChI
+      type: InChI
+      description: InChI
 license: CC BY 4.0
 links:
     - url: https://doi.org/10.1038/s41597-022-01832-2
@@ -142,6 +128,8 @@ bibtex:
       Suleyman Er},
       journal = {Nature Scientific Data}
 templates:
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solubilityAqSolPred__names__noun}
+      of {solubilityAqSolPred#} {solubilityAqSolPred__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {molecularSurface__names__noun}
       of {molecularSurface#} {molecularSurface__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {reactionFieldEnergy__names__noun}
@@ -166,7 +154,48 @@ templates:
       of {optGasEnergy#} {optGasEnergy__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {optGasHomo__names__noun}
       of {optGasHomo#} {optGasHomo__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {optGasLumo__names__noun}
+      of {optGasLumo#} {optGasLumo__units}.The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation
+      of |!}{InChI#} has a {solubilityAqSolPred__names__noun} of {solubilityAqSolPred#} {solubilityAqSolPred__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {molecularSurface__names__noun}
+      of {molecularSurface#} {molecularSurface__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {reactionFieldEnergy__names__noun}
+      of {reactionFieldEnergy#} {reactionFieldEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solventAccessSurface__names__noun}
+      of {solventAccessSurface#} {solventAccessSurface__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {cavityEnergy__names__noun}
+      of {cavityEnergy#} {cavityEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasEnergy__names__noun}
+      of {gasEnergy#} {gasEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasHomo__names__noun}
+      of {gasHomo#} {gasHomo__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {gasLumo__names__noun}
+      of {gasLumo#} {gasLumo__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solutionEnergy__names__noun}
+      of {solutionEnergy#} {solutionEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {solutionLumo__names__noun}
+      of {solutionLumo#} {solutionLumo__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {nuclearRepulsionEnergy__names__noun}
+      of {nuclearRepulsionEnergy#} {nuclearRepulsionEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasEnergy__names__noun}
+      of {optGasEnergy#} {optGasEnergy__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasHomo__names__noun}
+      of {optGasHomo#} {optGasHomo__units}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} {#representation of |!}{InChI#} has a {optGasLumo__names__noun}
+      of {optGasLumo#} {optGasLumo__units}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-            Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+      Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
             Result: {SMILES#}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
+      Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
+            Result: {InChI#}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+      Result: {SMILES#}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
+      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+      Result: {InChI#}
