fix: # missing in template var

--- a/data/tabular/mp_descriptions/meta.yaml
+++ b/data/tabular/mp_descriptions/meta.yaml
@@ -83,7 +83,7 @@ templates:
       CIF: {cifstr#}
       {#Description|Answer!}: {description#}
     - |-
-      Task: {Please design|Design!} a {cifstr__names__noun} that matches the description below.
+      Task: {#Please design|Design!} a {cifstr__names__noun} that matches the description below.
       Description: {description#}
       {#Answer|CIF!}: {cifstr#}
     - |-
