--- a/data/tabular/mp_descriptions/meta.yaml
+++ b/data/tabular/mp_descriptions/meta.yaml
@@ -79,7 +79,7 @@ bibtex:
       }
 templates:
     - |-
-      Task: {Please design|Design!} a {#crystal structure|material|compound|material structure|structure!} based on the {cifstr__names__noun}.
+      Task: {#Please design|Design!} a {#crystal structure|material|compound|material structure|structure!} based on the {cifstr__names__noun}.
       CIF: {cifstr#}
       {#Description|Answer!}: {description#}
     - |-
