--- a/data/tabular/kcnq2_potassium_channel_butkiewicz/meta.yaml
+++ b/data/tabular/kcnq2_potassium_channel_butkiewicz/meta.yaml
@@ -94,7 +94,7 @@ bibtex:
 templates:
     - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
-    - The {SMILES__description} {SMILES#} represents a molecule that {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
     - |-
       Task: Please classify a molecule based on the description.
