fix: QC templates 1

--- a/data/tabular/hiv/meta.yaml
+++ b/data/tabular/hiv/meta.yaml
@@ -68,10 +68,10 @@ templates:
       Result: {SMILES#}
     - |-
       User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {activity_HIV__names__adjective}?
-      Assistant: {activity_HIV#No&Yes}, this molecule is {activity_HIV#not &NULL}{activity_HIV__names__adjective}.
+      Assistant: Yes, this molecule is {activity_HIV#not &NULL}{activity_HIV__names__adjective}.
     - |-
       User: Is the molecule with the {SMILES__description} {SMILES#} {activity_HIV__names__adjective}?
-      Assistant: {activity_HIV#No&Yes}, it is {activity_HIV#not &NULL}{activity_HIV__names__adjective}.
+      Assistant: Yes, it is {activity_HIV#not &NULL}{activity_HIV__names__adjective}.
     - |-
       User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {activity_HIV#not &NULL}{activity_HIV__names__adjective}?
       Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
